@@ -15,6 +15,10 @@
 #                                                                                          #
 ############################################################################################
 
+~>XX.07.2012:
+
+- Fix Grounding Totem.
+
 ~>17.07.2012:
 
 - Implemented Crowd Control Delay.
